--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,11 +34,12 @@ a {
     display: flex;
     flex: 0 0 auto;
     width: 60%;
+    max-width: 1300px;
     max-height: 90%;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    gap: 1.5rem;
+    gap: 1.1rem;
     padding: 10px 20px;
 
     .banner-title {
@@ -54,32 +55,32 @@ a {
 
     div.banner-description {
       position: relative;
-      height: 60%;
+      height: 65%;
       overflow-y: scroll;
       width: 85%;
       font-family: "Tilt Neon", sans-serif;
       font-weight: 400;
       color: $font-color;
-      font-size: 1rem;
+      font-size: calc(13px + .3vw);
       text-align: justify;
     }
 
     .tags {
+      position: relative;
       display: flex;
       width: 90%;
       height: fit-content;
       align-items: center;
-      gap: 5px 7px;
-      position: relative;
+      justify-content: center;
+      gap: calc(2px + .2vw) calc(5px + .3vw);
       flex-wrap: wrap;
 
       .banner-tag {
         display: flex;
-        gap: 5px;
-        padding: 3px 8px;
+        padding: calc(2px + .1vw) calc(5px + .2vw);
         flex: 0 0 auto;
         background-color: $foreground;
-        border-radius: 5px;
+        border-radius: calc(3px + .2vw);
         align-items: center;
 
         .banner-tag-text {
@@ -87,7 +88,7 @@ a {
           font-family: "Tilt Neon", sans-serif;
           font-weight: 400;
           color: $font-color;
-          font-size: 12px;
+          font-size: calc(9px + .3vw);
           text-align: center;
           letter-spacing: 0;
           line-height: normal;
@@ -110,11 +111,11 @@ a {
           width: 125px;
           align-items: center;
           justify-content: center;
-          gap: 10px;
-          padding: 10px;
+          gap: calc(8px + .3vw);
+          padding: calc(3px + .3vw) calc(8px + .3vw);
           position: relative;
           align-self: stretch;
-          border-radius: 10px;
+          border-radius: calc(8px + .3vw);
           overflow: hidden;
         }
         .info-btn {
@@ -130,7 +131,7 @@ a {
         font-family: "Tilt Neon", sans-serif;
         font-weight: 400;
         color: $font-color;
-        font-size: 15px;
+        font-size: calc(15px + .3vw);
         text-align: center;
         letter-spacing: 0;
         line-height: normal;
@@ -142,12 +143,11 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 400px;
-    height: 600px;
-    margin-top: 3%;
+    width: calc(160px + 12vw);
+    aspect-ratio: 12/16;
     margin-right: 5%;
-    padding: 15px;
-    border-radius: 15px;
+    padding: calc(7px + .3vw);
+    border-radius: calc(7px + .3vw);
     transform: rotate(12deg);
     background-color: $font-color;
     box-shadow: 0 12px 12px 7px #00000040;
@@ -157,36 +157,31 @@ a {
       max-width: 100%;
       object-position: center;
       object-fit: cover;
+      border-radius: calc(3px + .2vw);
     }
   }
 }
 
-.latest-updates, .popular {
+.category {
   display: flex;
   flex-direction: column;
   width: 100%;
   align-items: flex-start;
-  gap: 10px;
-  position: relative;
-  flex: 0 0 auto;
+  gap: calc(10px + .3vw);
   //background-color: $font-color;
 
   .category-title {
-    align-items: center;
-    gap: 10px;
-    align-self: stretch;
-    width: 100%;
-    flex: 0 0 auto;
     display: flex;
-    position: relative;
+    align-items: center;
+    gap: calc(10px + .3vw);
+    padding-left: 3rem;
 
     .category-title-text {
-      position: relative;
       width: fit-content;
       font-family: "Tilt Neon", sans-serif;
       font-weight: 400;
       color: $font-color;
-      font-size: 25px;
+      font-size: calc(26px + 1vw);
       text-align: center;
       letter-spacing: 0;
       line-height: normal;
@@ -195,19 +190,20 @@ a {
 
   .category-list {
     display: flex;
-    justify-content: space-between;
     align-items: flex-start;
-    gap: 1.5rem;
+    gap: 2vw;
     padding: 0 1rem;
-    width: calc(100% - 2rem);
+    width: fit-content;
+    max-width: calc(100% - 2rem);
     overflow-x: scroll;
 
     .category-card {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 10px;
-      width: fit-content;
+      gap: calc(10px + .3vw);
+      height: calc(200px + 16vw);
+      aspect-ratio: 9/16;
 
       .category-card-cover {
         position: relative;
@@ -215,10 +211,10 @@ a {
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        height: 288px;
+        width: 100%;
         aspect-ratio: 12/16;
-        padding: 8px 10px;
-        border-radius: 12px;
+        padding: calc(8px + .3vw) 0;
+        border-radius: calc(12px + .3vw);
         background-color: $font-color;
         box-shadow: 0 7px 7px 5px #00000040;
 
@@ -228,7 +224,7 @@ a {
           width: 100%;
           top: 0;
           left: 0;
-          border-radius: 12px;
+          border-radius: calc(12px + .3vw);
           background-position: center;
           background-size: cover;
           background-repeat: no-repeat;
@@ -256,8 +252,9 @@ a {
             display: flex;
             flex-direction: column;
             width: 100%;
-            height: 34px;
-            border-radius: 12px 12px 0 0;
+            height: 10%;
+            min-height: calc(2.2rem + .3vw);
+            border-radius: calc(12px + .3vw) calc(12px + .3vw) 0 0;
             top: 0;
             left: 0;
             background-color: $blue-elem;
@@ -274,11 +271,11 @@ a {
 
             .description-title {
               text-align: center;
-              font-size: 18px;
+              font-size: calc(16px + .3vw);
             }
             .description-ctn {
               text-align: justify;
-              font-size: 11px;
+              font-size: calc(10px + .3vw);
               overflow-y: scroll;
               overflow-wrap: anywhere;
             }
@@ -287,7 +284,7 @@ a {
             z-index: 10;
             display: flex;
             width: 90%;
-            height: 22%;
+            height: 15%;
             align-items: center;
             justify-content: center;
             gap: 2px 4px;
@@ -299,11 +296,11 @@ a {
 
               .hover-tag {
                 display: flex;
-                gap: 5px;
-                padding: 2px 4px;
+                gap: calc(3px + .3vw);
+                padding: calc(1px + .1vw) calc(2px + .2vw);
                 flex: 0 0 auto;
                 background-color: $foreground;
-                border-radius: 4px;
+                border-radius: calc(2px + .2vw);
                 align-items: center;
 
                 .hover-tag-text {
@@ -311,7 +308,7 @@ a {
                   font-family: "Tilt Neon", sans-serif;
                   font-weight: 400;
                   color: $font-color;
-                  font-size: 11px;
+                  font-size: calc(10px + .3vw);
                   text-align: center;
                   letter-spacing: 0;
                   line-height: normal;
@@ -323,7 +320,7 @@ a {
           .hover-buttons {
             z-index: 10;
             width: 100%;
-            height: 12%;
+            height: 15%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -334,15 +331,15 @@ a {
               display: flex;
               justify-content: center;
               align-items: center;
-              padding: 5px 10px;
-              border-radius: 6px;
+              padding: calc(2px + .2vw) calc(8px + .3vw);
+              border-radius: calc(5px + .3vw);
 
               span.hover-btn-text {
                 width: fit-content;
                 font-family: "Tilt Neon", sans-serif;
                 font-weight: 400;
                 color: $font-color;
-                font-size: 14px;
+                font-size: calc(12px + .3vw);
                 text-align: center;
                 letter-spacing: 0;
                 line-height: normal;
